<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">اسلاميات</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="mm"><![CDATA[<]]></string>
    <string name="hello">Hello World, QiblaSenseActivity!</string>


    <string-array name="city">
        <item>Tunis</item>
        <item>Sfax</item>
        <item>Hammam Sousse</item>
        <item>Gabès</item>
        <item>Zarzis</item>
        <item>Kairouan</item>
        <item>Bizerte</item>
        <item>Gafsa</item>
        <item>Nabeul</item>
        <item>Ariana</item>
        <item>Kasserine</item>
        <item>Mnara</item>
        <item>Tataouine</item>
        <item>Béja</item>
        <item>Jendouba</item>
        <item>El Kef</item>
        <item>Mahdia</item>
        <item>Sidi Bouzid</item>
        <item>Tozeur</item>
        <item>Siliana</item>
        <item>Kebili</item>
        <item>Ben Gardane</item>
        <item>Zaghouan</item>
        <item>Dehiba</item>
        <item>Sousse</item>
        <item>Ben Arous</item>
        <item>Medenine</item>
        <item>Manouba</item>
        <item>Monastir</item>
    </string-array>

    <string name="mmm"><![CDATA[>]]></string>
    <string name="subah">Subah</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="to">TODO</string>
    <string name="imsak">Imsak</string>
    <string name="go">توجه</string>
    <string name="bio">I\'m professional jenior software engineer and expert in mobile application field development. I have knowledge and experience working with Android development platforms.</string>
    <string name="sub_name">Android App Developer</string>
    <string name="name">Mehdi EL Ayeb</string>
    <string name="_216_52533368">+216 52533368</string>
    <string name="appwidget_text" tools:ignore="ExtraTranslation">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_">Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
