<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_gra"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/a"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:text="About me"
        android:textSize="18sp"
        android:textColor="#FAFAFA"
        android:layout_height="wrap_content" />

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:padding="16dp"
            android:layout_marginTop="66dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                app:layout_constraintTop_toTopOf="@id/m"
                android:layout_marginTop="16sp"
                app:layout_constraintBottom_toBottomOf="@id/m"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16sp"
                android:background="#E3F2FD" />


            <LinearLayout
                android:id="@+id/m"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:background="#FFFFFF"
                android:layout_marginStart="16dp"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"

                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="132dp"
                    android:layout_height="132dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/me" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#5b86e5"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:text="@string/sub_name"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:textColor="#9E9E9E"
                    android:layout_marginBottom="32dp"
                    android:paddingEnd="16dp"
                    android:text="@string/bio"
                    android:textAlignment="center"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/m"
                android:layout_marginBottom="1dp"
                android:orientation="vertical">

                <LinearLayout
                    android:background="#E3F2FD"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_gmail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="mehdiayeb14@gmail.com"
                        android:textColor="#616161"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#E3F2FD"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:layout_marginTop="10sp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_mobile_phone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="@string/_216_52533368"
                        android:textColor="#616161"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#E3F2FD"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:layout_marginTop="10sp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_faceboo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="fb.com/mehdi.ayeb.92"
                        android:textColor="#616161"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16sp"
                    android:background="#E3F2FD"
                    android:paddingEnd="16sp"
                    android:layout_marginTop="10sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_instagram" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="mehdii__ayeb"
                        android:textColor="#616161"
                        android:textSize="14sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_marginBottom="100dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:layout_marginTop="10dp"
                    android:paddingStart="16sp"
                    android:background="#E3F2FD"
                    android:paddingEnd="16sp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="28dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_github" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:text="ayebmehdi2"
                        android:textColor="#616161"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>